--- a/rebar.config
+++ b/rebar.config
@@ -1,13 +1,15 @@
 {min_otp_version, "19.0"}.
 
 {deps, [
-    {lager, "3.6.8"},
+    % {lager, "3.6.8"},
     {plumtree, "0.5.0"},
-    {partisan, "3.0.0"},
+    % {partisan, "3.0.0"},
+    {partisan , {git , "https://github.com/barrel-db/partisan.git" , {branch , "barrel-fixes"}}} ,
     {types, "0.1.8"},
     time_compat,
     rand_compat,
-    lasp_support,
+    % lasp_support,
+    {lasp_support , {git , "https://github.com/Laymer/lasp_support.git" , {branch , "remove-lager"}}} ,
     {gen_flow, "0.0.5"},
     {gen_fsm_compat, "0.3.0"}
 ]}.
@@ -27,8 +29,7 @@
 {erl_opts, [debug_info,
             warnings_as_errors,
             nowarn_deprecated_function,
-            {platform_define, "^[0-9]+", namespaced_types},
-            {parse_transform, lager_transform}]}.
+            {platform_define, "^[0-9]+", namespaced_types}]}.
 {eunit_opts, [verbose, {report,{eunit_surefire,[{dir,"."}]}}]}.
 {edoc_opts, [{preprocess, true}]}.
 
