--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 
 {deps, [
     % {lager, "3.6.8"},
-    {plumtree, "0.5.0"},
+    % {plumtree, "0.5.0"},
     % {partisan, "3.0.0"},
     {partisan , {git , "https://github.com/barrel-db/partisan.git" , {branch , "barrel-fixes"}}} ,
     {types, "0.1.8"},
@@ -10,6 +10,7 @@
     rand_compat,
     % lasp_support,
     {lasp_support , {git , "https://github.com/Laymer/lasp_support.git" , {branch , "remove-lager"}}} ,
+    {plumtree , {git , "https://github.com/Laymer/plumtree.git" , {branch , "remove-lager"}}} ,
     {gen_flow, "0.0.5"},
     {gen_fsm_compat, "0.3.0"}
 ]}.
