--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
     % {plumtree, "0.5.0"},
     % {partisan, "3.0.0"},
     {partisan , {git , "https://github.com/barrel-db/partisan.git" , {branch , "barrel-fixes"}}} ,
-    {types, "0.1.8"},
+    {types, {git , "https://github.com/julien-banken/types" , {branch , "master"}}},
     time_compat,
     rand_compat,
     % lasp_support,
